feat: add path to search results
